# findMFHCS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  checkSubmodule.sh
buildscripts/: buildVigra.sh  buildpwiz.sh  buildscript.sh  gitclonefindMFBase.sh  installpwizfromtrusty.sh
cmake_modules/: FindFindMFBase.cmake  FindFindMFInterfaces.cmake  FindGlog.cmake  FindGtest.cmake  FindPwiz.cmake  FindSoci.cmake  FindStats.cmake  FindTbb.cmake  FindVigra.cmake  externalfindmfbase.cmake  externalglog.cmake  externalgoogletest.cmake  externalvigra.cmake  findmfDefaults.cmake
doc/: Doxyfile  Doxyfile.cmake
include/base/base/: base.h  cumsum.h  diff.h  equispaceinterpolation.h
include/base/base/utilities/: interpolation.h
include/base/chemistry/: iisotopeenvelope.h
include/base/filter/: morphology.h
include/base/filter/scanfilter/: backgroundsubtract.h  getfitlertophat.h  iscanfilterfunctor.h  scanfilterpipeline.h  transformfilter.h
include/base/filter/utilities/: gauss.h  mexhat.h
include/base/misc/: sqlparse.h
include/base/ms/: deisotoper.h  generatesamplespec.h  peakpicker.h  peakpickerqtof.h  simplepicker.h
include/base/resample/: bucket1d.h  convert2dense.h
include/base/stats/: moments.h  momentsW.h  normal.h  quantiles.h  scale.h  stats.h  uniform.h
include/base/utils/: Copy_if.h  readwritelines.h
include/base/utils/utilities/: readtableutils.h
include/findmf/algo/: deisotop.h  projectionstats.h
include/findmf/algo/vigra/: ComputeFeatureStatistics.h  differenceOfGaussians.h  featurefinder.h  lcmsimagefilter.h  mexhat2DNaive.h  vigratypedefs.h
include/findmf/application/: RT2sum.h  TBBFilters.h  featuresmapprinter.h  featuresmapsqlwriter.h  featuresmapsqlwriterfacade.h  lcmsimagefilter.h  lcmsimagereader.h  swathpropertiesreader.h
include/findmf/apps/: toolparameters.h
include/findmf/datastruct/: Instrument.h  Map2D.h  feature2d.h  featurereadadapter.h  featurereadadapterfm.h  featuresmap.h  featurewriteadapter.h  lcmsimage.h  maplcmsdescription.h  msfileinfo.h  rangefeature.h  swathinfo.h  transition.h
include/findmf/fileio/: helperfunctions.h  spectrastreader.h  swathwindowrange.h
include/findmf/fileio/pwiz/: filteredspectralist.h  qtofpeakpickerfilter.h
include/findmf/fileio/sql/: createtables.h  writemapinfo.h  writesampleparams.h
include/findmf/fileio/sqlite/: Isqlfeaturestorage.h  sqlfeaturertree.h  sqlfeaturestorage.h  sqlfeaturetable.h  sqlfeaturetableselects.h
include/findmf/fileio/sqlite2/: Isqlfeaturestorage.h  featuresmapsqlwriter.h  featuresmapsqlwriterfacade.h  sqlfeaturertree.h  sqlfeaturertreeselect.h  sqlfeaturestorage.h  sqlfeaturetable.h  sqlfeaturetableselects.h  sqlmapinfotable.h
include/findmf/fileio/sqlsoci/: sqlfeaturertree.h  sqlfeaturestorage.h  sqlfeaturetable.h  sqlfindmfstorage.h
include/findmf/fileiopwiz/: IsotopeEnvelope.h  filteredspectralist.h  lcmsimagereader.h  qtofpeakpickerfilter.h  swathpropertiesreader.h
include/findmf/interfaces/: ifeatureaccess.h  ifeatureallaccess.h  ifeaturerangeaccess.h  ifeaturewrite.h
include/findmf/tbbfilters/: SegmentImage.h  featurefind.h  lcmsimagereader.h  mapfilter.h  writeImage.h  writesqlfeatures.h
include/findmf/utils/: parsesql.h
include/findmf/utils/utilities/: sqlparse.h
include/qtwidgets/: MapVis.h  mapadapter.h
scripts/: Rdta2d.R  averagine.txt  buildpwiz.sh  buildscript.sh  cppcheckconf.sh  headertemplate.txt  monitormem.sh  pp.sh  readingMZML.R  resampling.Snw  resampling.tex  test.sh  thred.sh  updateheader.sh
scripts/cppcheck/: cppcheckrun.sh  mcc.sh
scripts/documentation/: analysepp.R  resampling.Snw
scripts/test/: checkSubmodule.sh  convert2Image.sh  filterQTView.sh  filterSingleMap.sh  findMF.sh  pp.sh  pp2.sh  samplequeries.sh
sql/: analysesql.sql  dbschema.sql  model.mwb  schema.sql  vispurp.mwb
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/basetest/: CMakeLists.txt
src/base/chemistrytest/: IisotopeEnvelopeTest.cpp
src/base/filtertest/: morphologytest.cpp
src/base/mstest/: CMakeLists.txt  DeisotoperTest.cpp  peakpickertest.cpp  simplepickertest.cpp
src/base/resampletest/: CMakeLists.txt  convert2densetest.cpp  equispaceinterpolationtest.cpp
src/base/statstest/: CMakeLists.txt  quantilestest.cpp  statstest.cpp
src/base/utilstest/: CMakeLists.txt  copy_iftest.cpp
src/basetmp/mstest/: parabolafittest.cpp
src/findmf/: CMakeLists.txt
src/findmf/application/: CMakeLists.txt  Map.txt  lcmsimage.cpp  tmp.cpp
src/findmf/apps/: CMakeLists.txt  PeakPicker.cpp  conv2Image.cpp  filterQTView.cpp  filterSingleMap.cpp  findMF.cpp  findMFMH.cpp  multiFiles.cpp.tmp  parseCMLC2Image.h  parseargExtract.h  parseargs.xxx  parseargsImageExport.h  testThreading.cpp  toolparameters.h  transitionExtractMain.cpp
src/findmf/appsqt/: CMakeLists.txt  filterQTView.cpp  testWidget.cpp
src/findmf/qtwidgets/: CMakeLists.txt  TwoPanelImageWidget.h  mandelbrotwidget.cpp  mandelbrotwidget.h  renderthread.cpp  renderthread.h
src/findmf/tests/: CMakeLists.txt  preliminarytests.cpp  preliminarytests.h  transitionhelpers.h  transitionhelpers.hpp
src/findmf/tests/algo/: CMakeLists.txt  projectionstats.cpp
src/findmf/tests/datastruct/: CMakeLists.txt  featuresmaptest.cpp  lcmsimagetest.cpp  map2dtest.cpp  map2test.cpp  map2test.h  maplcmsdescriptiontest.cpp
src/findmf/tests/fileio/: CMakeLists.txt  SQLFacadeTest.cpp  SQLFeatureStorageTest.cpp  featureTable.cpp  sqlmapinfotabletest.cpp  sqlsocitest.cpp  testRtree.cpp
src/findmf/tests/pwiztests/: CMakeLists.txt  DeisotoperTest.cpp  IsotopeEnvelope.cpp
src/findmf/tests/tbbtests/: CMakeLists.txt  FlowChartTest.cpp  pipeline2.cpp  pipelinetest.cpp  testtbb.cpp  testtbb.h
src/findmf/utils/: CMakeLists.txt  parsesql.cpp
